fix Z-index carousel

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
 .navWrap {
     position: sticky;
     top: 0;
+    z-index: 1;
     width: 100%;
     background-color: #022B32;
     padding: 1em;
