--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -1,7 +1,24 @@
 .App {
-    font-family: sans-serif;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-width: 95rem;
     height: 100vh;
+    width: 1500px;
+    margin: 0 auto;
+    border: black 2px solid;
+}
+
+.controls-wrapper {
+    width: 100%;
+}
+
+.carousel-wrapper {
+    width: 100%;
+}
+
+.rec-carousel-item:focus {
+    outline: none;
+    box-shadow: inset 0 0 1px 0px violet;
 }
